# supergoonHandler

./: .gitignore  CMakeLists.txt  Makefile  README.md  luaboi.lua  supergoonHandlerExe.exe.manifest  test.bat
scripts/: config.lua  goonBase.lua
src/: character.c  character.h  debug.c  debug.h  gnpch.h  inventory.c  inventory.h  main.c  refresh.c  refresh.h  settings.c  settings.h  tui.c  tui.h
src/aux/: lua.c  lua.h
src/platform/: gn_curses.h  gn_system.h
src/platform/Mac/: macapi.c  macapi.h
src/platform/Windows/: winapi.c  winapi.h
src/primitives/: point.h  rectangle.h
src/scripting/: luaGlue.c  luaGlue.h
src/tui/: charWindow.c  charWindow.h  inventoryWindow.c  inventoryWindow.h  messageWindow.c  messageWindow.h  tuiShared.c  tuiShared.h  unitWindow.c  unitWindow.h
tests/: cppclean.sh
